# EyeQ

./: .gitignore  LICENSE  README.md  pyproject.toml  run_dashboard.sh
docs/: EyeQ-Technical-Reference.md  Getting-Started.md
examples/: 112g_nrz.yaml  112g_pam4.yaml  112g_pam4_vsr.yaml  generate_reference_channels.py  run_link.py
examples/data/: 112G_LR.s4p  112G_MR.s4p  112G_VSR.s4p  112G_XSR.s4p  112G_XSRplus.s4p
eyeq/: __init__.py  channel_model.py  spectral.py
eyeq/analysis/: __init__.py  ber.py  eye.py  fec.py  jitter.py  mlsd.py  optimize.py  report.py  snr.py
eyeq/blocks/: __init__.py  cdr_slicer.py  channel.py  ctle.py  dfe.py  noise.py  rxffe.py  rxjitter.py  source.py  txffe.py  txjitter.py
eyeq/core/: __init__.py  block.py  context.py  pipeline.py  registry.py  schema.py
eyeq/engines/: __init__.py  _kernels.py  statistical.py  transient.py  worker.py
eyeq/gui/: __init__.py  binding.py  dashboard.py  panels.py  plots.py  theme.py
eyeq/io/: __init__.py  config.py  synth_channel.py  touchstone.py
eyeq/validation/: __init__.py
tests/: test_ber.py  test_blocks.py  test_blocks_lti.py  test_bypass.py  test_config.py  test_context.py  test_dfe.py  test_fec.py  test_gui.py  test_jitter.py  test_mlsd.py  test_optimize.py  test_pipeline.py  test_registry.py  test_report.py  test_rxjitter.py  test_statistical.py  test_touchstone.py  test_transient.py  test_validation_serdespy.py  test_view.py
