[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eyeq"
version = "0.0.0"
description = "EyeQ — interactive SerDes link-modeling tool (statistical + transient engines)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# Core deps: numpy (arrays everywhere) + pyyaml (config save/load is a core feature).
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Phase 1-3 simulation backends.
sim = [
    "scipy>=1.10",
    "numba>=0.59",
    "scikit-rf>=0.29",
]
# Phase 4 GUI.
gui = [
    "pyqtgraph>=0.13",
    "PySide6>=6.6",
]
# Dev / test. serdespy is a test-only cross-validation reference, not a runtime dep.
dev = [
    "pytest>=7.0",
    "serdespy",
]

[tool.setuptools.packages.find]
include = ["eyeq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
